// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Generic/Stack Center 1`] = `
<div
  className="dd stack"
>
  <div
    className="dd stack-center-layer"
  >
    <div
      style={
        Object {
          "background": "yellow",
          "height": "1em",
          "width": "1em",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "background": "green",
        "height": "4em",
      }
    }
  />
</div>
`;

exports[`Storyshots Generic/Stack Corners 1`] = `
<div
  className="dd stack"
>
  <div
    className="dd stack-layer left top"
  >
    <p
      className="dd text-subtitle1"
      style={
        Object {
          "background": "yellow",
        }
      }
    >
      top-left
    </p>
  </div>
  <div
    className="dd stack-layer top right"
  >
    <p
      className="dd text-subtitle1"
      style={
        Object {
          "background": "yellow",
        }
      }
    >
      top-right
    </p>
  </div>
  <div
    className="dd stack-layer left bottom"
  >
    <p
      className="dd text-subtitle1"
      style={
        Object {
          "background": "yellow",
        }
      }
    >
      bottom-left
    </p>
  </div>
  <div
    className="dd stack-layer right bottom"
  >
    <p
      className="dd text-subtitle1"
      style={
        Object {
          "background": "yellow",
        }
      }
    >
      bottom-right
    </p>
  </div>
  <div
    style={
      Object {
        "background": "green",
        "height": "4em",
      }
    }
  />
</div>
`;
